--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
                                     <h4 class="mb-4">Hello, I'm Brian Ismail, Based in Kenya</h4>
-                                    <p class="mb-4">Hello! I'm a passionate front-end developer and UI/UX designer dedicated to creating seamless, user-friendly digital experiences. With expertise in HTML, CSS, and JavaScript, I bring designs to life using React as my framework of choice. My focus lies in crafting intuitive interfaces that balance aesthetics with functionality, ensuring every interaction is both engaging and efficient. Let's build something amazing together!
+                                    <p class="mb-4">I'm a passionate front-end developer and UI/UX designer dedicated to creating seamless, user-friendly digital experiences. With expertise in HTML, CSS, and JavaScript, I bring designs to life using React as my framework of choice. My focus lies in crafting intuitive interfaces that balance aesthetics with functionality, ensuring every interaction is both engaging and efficient. Let's build something amazing together!
                                     </p>
                                     <div class="row g-4 mb-4">
                                         <div class="col-6">
