--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                                                 <a href="#" class="h4 mb-0">Web Development</a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam repudiandae
+                                                <p class="mb-0">I can seamlessly complete a front end using javascript and also use SCSS
                                                 </p>
                                             </div>
                                             <div class="col-xl-3">
