--- a/index.html
+++ b/index.html
@@ -233,68 +233,6 @@
         </div>
         <!-- Education End -->
 
-        <!-- Experience Start -->
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row g-0">
-                    <div class="col-lg-3">
-                        <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
-                            <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                                <p class="text-white sub-title">Experience</p>
-                                <h1 class="display-6 text-white mb-0">My real work experience</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-9">
-                        <div class="experience-content h-100 pt-6 ps-6 pb-6">
-                            <div class="row g-4">
-                                <div class="col-12">
-                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
-                                        <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Kipawa Sports Academy</p>
-                                            <div>
-                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
-                                            </div>
-                                        </div>
-                                        <h4 class="mb-3">Seinor UI/UX Desinger</h4>
-                                        <p class="mb-0">Senior UI/UX Designer with extensive real-world experience, including impactful design work at Kipawa Sport Academy, creating innovative and user-friendly solutions to enhance user engagement and satisfaction.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
-                                        <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">RabbiChessClub</p>
-                                            <div>
-                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
-                                            </div>
-                                        </div>
-                                        <h4 class="mb-3">UI/UX Designer</h4>
-                                        <p class="mb-0">UI/UX Designer with practical experience, specializing in innovative, user-focused designs for organizations like Rabbi Chess Club, providing unique solutions that enhance usability and design excellence.</p>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
-                                        <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">RubbiChessClub</p>
-                                            <div>
-                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
-                                            </div>
-                                        </div>
-                                        <h4 class="mb-3">Junior Visual Designer</h4>
-                                        <p class="mb-0">Junior Visual Designer with foundational expertise in conceptualizing inventive, audience-oriented designs for organizations like Rabbi Chess Club, delivering tailored solutions that improve functionality and design quality.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Experience End -->
-
-
         <!-- Skills Start -->
         <div class="container-fluid">
             <div class="container">
@@ -382,6 +320,70 @@
         </div>
         <!-- Skills End -->
 
+        
+        <!-- Experience Start -->
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row g-0">
+                    <div class="col-lg-3">
+                        <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
+                            <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
+                                <p class="text-white sub-title">Experience</p>
+                                <h1 class="display-6 text-white mb-0">My real work experience</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-9">
+                        <div class="experience-content h-100 pt-6 ps-6 pb-6">
+                            <div class="row g-4">
+                                <div class="col-12">
+                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
+                                        <div class="d-flex align-items-center mb-3">
+                                            <p class="fs-5 mb-0 me-4">Kipawa Sports Academy</p>
+                                            <div>
+                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
+                                            </div>
+                                        </div>
+                                        <h4 class="mb-3">Seinor UI/UX Desinger</h4>
+                                        <p class="mb-0">Senior UI/UX Designer with extensive real-world experience, including impactful design work at Kipawa Sport Academy, creating innovative and user-friendly solutions to enhance user engagement and satisfaction.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
+                                        <div class="d-flex align-items-center mb-3">
+                                            <p class="fs-5 mb-0 me-4">RabbiChessClub</p>
+                                            <div>
+                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
+                                            </div>
+                                        </div>
+                                        <h4 class="mb-3">UI/UX Designer</h4>
+                                        <p class="mb-0">UI/UX Designer with practical experience, specializing in innovative, user-focused designs for organizations like Rabbi Chess Club, providing unique solutions that enhance usability and design excellence.</p>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
+                                        <div class="d-flex align-items-center mb-3">
+                                            <p class="fs-5 mb-0 me-4">RubbiChessClub</p>
+                                            <div>
+                                                <span class="fa fa-calendar me-1"></span> 2024 - 2025
+                                            </div>
+                                        </div>
+                                        <h4 class="mb-3">Junior Visual Designer</h4>
+                                        <p class="mb-0">Junior Visual Designer with foundational expertise in conceptualizing inventive, audience-oriented designs for organizations like Rabbi Chess Club, delivering tailored solutions that improve functionality and design quality.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Experience End -->
+
+
+        
 
         <!-- Service Start -->
         <div class="container-fluid" id="RubiService">
@@ -489,7 +491,7 @@
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
                                         <h4 class="text-body">Web Design</h4>
-                                        <h1 class="display-6 mb-0">Front developer fro KSA Co.</h1>
+                                        <h1 class="display-6 mb-0">Front developer foR KSA Company.</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
@@ -508,7 +510,7 @@
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Web Developmentent</h4>
+                                        <h4 class="text-body">Web Developmentnt</h4>
                                         <h1 class="display-6 mb-0">Website Development for RabbiChessClub</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
@@ -806,7 +808,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12 text-center">
-                                    <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-body me-2"></i>Your Site Name</a>, All right reserved.</span>
+                                    <span class="text-body"><a href="https://www.bismail.netlify.app" class="border-bottom text-white"><i class="fas fa-copyright text-body me-2"></i>bismail</a>, All right reserved.</span>
                                 </div>
                                 <div class="col-12 text-center text-body">
                                      Designed By <a class="border-bottom text-white" href="https://brianismail.com">Brian Ismail</a>
