--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <h1 class="display-6 text-white mb-0">Brian I.</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">👋 Hello I'm Brian Ismail</p>
+                                <p class="text-white sub-title"> Hello I'm Brian Ismail</p>
                                 <img src="./img/kid-toon2.png" width="50px">
                                 <h1 class="display-6 text-white mb-0">Front-end Developer</h1>
                             </div>
